src/styles/elements/_header-content.css
@layer components {
    .header-content {
        --header-content-position: absolute;
        --header-content-top: 50%;
        --header-content-bottom: unset;
        --header-content-right: unset;
        --header-content-left: 50%;
        --header-content-translate-x: -50%;
        --header-content-translate-y: -50%;
        --header-content-width: calc(100% - calc(var(--header-content-padding) * 2));
        --header-content-max-width: var(--header-content-width);
        /* stylelint-disable-next-line max-line-length */
        --header-content-transform: translate(var(--header-content-translate-x), var(--header-content-translate-y)) !important;
        --header-content-padding: var(--spacing-normal);
        --header-content-background-color: var(--color-bg);
        --header-content-border-radius: var(--border-radius-default);
        --header-content-z-index: var(--z-index-content);

        --header-title-color: var(--color-primary);

        --header-text-alignment: center;

        --header-cta-margins: 0 auto;

        position: var(--header-content-position);
        top: var(--header-content-top);
        bottom: var(--header-content-bottom);
        right: var(--header-content-right);
        /* stylelint-disable-next-line declaration-block-no-redundant-longhand-properties */
        left: var(--header-content-left);
        transform: var(--header-content-transform);
        width: var(--header-content-width);
        max-width: var(--header-content-max-width);
        padding: var(--header-content-padding);
        background-color: var(--header-content-background-color);
        border-radius: var(--header-content-border-radius);
        z-index: var(--header-content-z-index);
    }

    .header[header-type="slider"] .header-content {
        --header-content-width: calc(100% - calc(var(--spacing-xl) * 3));
        --header-content-z-index: 2;
    }

    .header-content[is-title-only] {
        --header-content-background-color: transparent;
        --header-content-padding: 0;
        --header-title-color: var(--color-bg);
    }

    .header-content[text-alignment="left"] {
        --header-text-alignment: left;
        --header-cta-margins: 0 auto 0 0;
    }

    .header-content[text-alignment="right"] {
        --header-text-alignment: right;
        --header-cta-margins: 0 0 0 auto;
    }

    .header-content[accent-color="primary"] {
        --header-title-color: var(--color-primary);
    }

    .header-content[accent-color="secondary"] {
        --header-title-color: var(--color-secondary);
    }

    .header-content[accent-color="font"] {
        --header-title-color: var(--color-font);
    }

    .header-content[vertical-position="top"] {
        --header-content-top: var(--spacing-xxl);
        --header-content-translate-y: 0;
    }

    .header-content[vertical-position="bottom"] {
        --header-content-top: unset;
        --header-content-bottom: var(--spacing-xxl);
        --header-content-translate-y: 0;
    }

    .header[header-type="slider"] .header-content[vertical-position="bottom"] {
        --header-content-bottom: var(--spacing-xl);
    }

    .header-content[horizontal-position="left"] {
        --header-content-left: var(--spacing-xxl);
        --header-content-translate-x: 0;
        --header-content-width: calc(100% - calc(var(--header-content-left) * 2));
    }

    .header-content[horizontal-position="right"] {
        --header-content-left: unset;
        --header-content-right: var(--spacing-xxl);
        --header-content-translate-x: 0;
        --header-content-width: calc(100% - calc(var(--header-content-right) * 2));
    }

    .header-content__title,
    .header .slider :is(h1, h2, h3, h4, h5) {
        text-align: var(--header-text-alignment);
        color: var(--header-title-color) !important;
    }

    .header-content__text,
    .header-content > p {
        text-align: var(--header-text-alignment);
    }

    .header-content__text:first-child,
    .header-content > p:first-child {
        margin-top: 0;
    }

    .header-content__cta {
        margin: var(--header-cta-margins);
    }

    .header .slider .header-content[text-alignment="left"] .header-content__cta,
    .header .slider .header-content[text-alignment="left"] .button {
        margin-left: 0;
        margin-right: auto;
    }

    .header .slider .header-content[text-alignment="right"] .header-content__cta,
    .header .slider .header-content[text-alignment="right"] .button {
        margin-left: auto;
        margin-right: 0;
    }

    .header .slider .header-content[text-alignment="default"] .header-content__cta,
    .header .slider .header-content[text-alignment="center"] .header-content__cta,
    .header .slider .header-content[text-alignment="default"] .button,
    .header .slider .header-content[text-alignment="center"] .button {
        margin-left: auto;
        margin-right: auto;
    }

    @container (min-width: 840px) {
        .header-content {
            --header-content-padding: var(--spacing-l);
        }

        .header[header-type="slider"] .header-content[content-size="full"] {
            --header-content-width: calc(100% - calc(var(--spacing-xxxl) * 3));
        }

        .header[header-type="slider"] .header-content[horizontal-position="left"] {
            --header-content-left: calc(var(--spacing-xxxl) + var(--spacing-normal));
        }

        .header[header-type="slider"] .header-content[horizontal-position="right"] {
            --header-content-right: calc(var(--spacing-xxxl) + var(--spacing-normal));
        }

        .header-content[content-size="half"] {
            --header-content-max-width: 50%;
        }

        .header-content[content-size="third"] {
            --header-content-max-width: calc(100% / 3);
        }

        .header-content[content-size="quarter"] {
            --header-content-max-width: 25%;
        }
    }
}

